fix height on mobile part 2

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,8 +24,11 @@ html {
 }
 
 .wrapper {
-    height: 100vh;
+    min-height: 100%;
     background-color: $secondary-color;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
 }
 
 .wrapper::before {
@@ -33,7 +36,7 @@ html {
     position: absolute;
     top: 0;
     left: 0;
-    height: 100vh;
+    min-height: 100%;
     width: 100%;
     background: url('../img/Ghosts_portrait_MAR25_FIN1_web.jpg') no-repeat center center/cover;
     // filter: grayscale(100%) opacity(10%);
@@ -115,8 +118,6 @@ header {
 
 .hero {
     z-index: 2;
-    padding-top: 5rem;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
